5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1662_2969.log
== TEST (2019-04-15 14:15:05) 
-- CODE:
var1 = int(input("jogos"))
var2 = float(input("preco primeiro jogo"))
var3 = float(input("preco segundo jogo"))
total = (var1 * var2) + (var1 * var3 * 25 /100)
print = (round("total ,2"))
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = (round("total ,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:15:27) 
-- CODE:
var1 = int(input("jogos"))
var2 = float(input("preco primeiro jogo"))
var3 = float(input("preco segundo jogo"))
total = (var1 * var2) + (var1 * var3 * 25 /100)
print = (round("total ,2"))
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = (round("total ,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:03) 
-- CODE:
var1 = int(input("jogos"))
var2 = float(input("preco primeiro jogo"))
var3 = float(input("preco segundo jogo"))
total = (var1 * var2) + (var1 * (var3 * 25 /100))
								

print = (round("total ,2"))
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print = (round("total ,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:26) 
-- CODE:
var1 = int(input("jogos"))
var2 = float(input("preco primeiro jogo"))
var3 = float(input("preco segundo jogo"))
total = (var1 * var2) + (var1 * (var3 * 25 /100))
								

print = (round(" total ,2 "))
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print = (round(" total ,2 "))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:42) 
-- CODE:
var1 = int(input("jogos"))
var2 = float(input("preco primeiro jogo"))
var3 = float(input("preco segundo jogo"))
total = (var1 * var2) + (var1 * (var3 * 25 /100))
								

print =(round(" total ,2 "))
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print =(round(" total ,2 "))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:53) 
-- CODE:
var1 = int(input("jogos"))
var2 = float(input("preco primeiro jogo"))
var3 = float(input("preco segundo jogo"))
total = (var1 * var2) + (var1 * (var3 * 25 /100))
								

print =(round(" total ,2 "))
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print =(round(" total ,2 "))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:20:46) 
-- CODE:
var1 = int(input("jogos"))
var2 = float(input("preco primeiro jogo"))
var3 = float(input("preco segundo jogo"))
total = (var1 * var2) +  (var3 * 25 /100))

print =(round("total,2"))
				  
-- ERROR:
File "XXXX", line 4
    total = (var1 * var2) +  (var3 * 25 /100))
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:20:55) 
-- CODE:
var1 = int(input("jogos"))
var2 = float(input("preco primeiro jogo"))
var3 = float(input("preco segundo jogo"))
total = (var1 * var2) +  (var3 * 25 /100)

print =(round("total,2"))
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print =(round("total,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:32) 
-- CODE:
var1 = int(input("jogos"))
var2 = float(input("preco primeiro jogo"))
var3 = float(input("preco segundo jogo"))
total = (var1 * var2) + (var3 * 25 /100)
print = (round(total,2))
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print =(round("total,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:56) 
-- CODE:
var1 = int(input("jogos"))
var2 = float(input("preco primeiro jogo"))
var3 = float(input("preco segundo jogo"))
total = (var1 * var2) + (var3 * 25 /100)
print = (round("total,2"))
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = (round("total,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:25:03) 
-- CODE:
var1 = int(input("jogos"))
var2 = float(input("preco primeiro jogo"))
var3 = float(input("preco segundo jogo"))
total = (var1 * var2) + (var3 * 25 /100)
print = (round("total,2"))
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = (round("total,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:26:32) 
-- CODE:
var1 = int(input("jogos"))
var2 = float(input("preco primeiro jogo"))
var3 = float(input("preco segundo jogo"))
total = (var1 * var2) + (var3 * 25 /100)
print = (round("total,2"))
				  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print = (round("total,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:33:27) 
-- CODE:
var1 = int(input("jogos"))
var2 = float(input("preco primeiro jogo"))
var3 = float(input("preco segundo jogo"))
total = (var1 * var2) + (var3 * 25 /100)
print = (round("total,
				  
-- ERROR:
File "XXXX", line 5
    print = (round("total,
                         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
